# src/main/java/it/gov/pagopa/pu/fileshare/controller/IngestionFlowFilesController.java
@@ -1,6 +1,7 @@
 package it.gov.pagopa.pu.fileshare.controller;
 
 import it.gov.pagopa.pu.fileshare.controller.generated.IngestionFlowFileApi;
+import it.gov.pagopa.pu.fileshare.dto.generated.FileOrigin;
 import it.gov.pagopa.pu.fileshare.dto.generated.IngestionFlowFileType;
 import it.gov.pagopa.pu.fileshare.security.SecurityUtils;
 import it.gov.pagopa.pu.fileshare.service.ingestion.IngestionFlowFileService;
@@ -19,8 +20,8 @@ public class IngestionFlowFilesController implements IngestionFlowFileApi {
   }
 
   @Override
-  public ResponseEntity<Void> uploadIngestionFlowFile(Long organizationId, IngestionFlowFileType ingestionFlowFileType, MultipartFile ingestionFlowFile) {
-    ingestionFlowFileService.uploadIngestionFlowFile(organizationId, ingestionFlowFileType, ingestionFlowFile, SecurityUtils.getLoggedUser(),
+  public ResponseEntity<Void> uploadIngestionFlowFile(Long organizationId, IngestionFlowFileType ingestionFlowFileType, FileOrigin fileOrigin, MultipartFile ingestionFlowFile) {
+    ingestionFlowFileService.uploadIngestionFlowFile(organizationId, ingestionFlowFileType, fileOrigin, ingestionFlowFile, SecurityUtils.getLoggedUser(),
       SecurityUtils.getAccessToken());
     return ResponseEntity.ok(null);
   }
